--- a/buildquantumvis/rootfs/rootfs-skeleton/usr/share/applications.in/vv-dl-latest.desktop
+++ b/buildquantumvis/rootfs/rootfs-skeleton/usr/share/applications.in/vv-dl-latest.desktop
@@ -1,20 +1,5 @@
 [Desktop Entry]
 Encoding=UTF-8
-Name[bg]=Изтеглете най-новия Vivaldi
-Name[cs]=Stáhněte si nejnovější Vivaldi
-Name[da]=Download den seneste Vivaldi
-Name[nl]=Download de nieuwste Vivaldi
-Name[fi]=Lataa uusin Vivaldi
-Name[fr]=Télécharger le dernier Vivaldi
-Name[de]=Laden Sie die neueste Version von Vivaldi
-Name[el]=Κατεβάστε το τελευταίο Vivaldi
-Name[hu]=Töltse le a legújabb Vivaldi
-Name[it]=Scarica l'ultimo Vivaldi
-Name[pl]=Pobierz najnowszego Vivaldi
-Name[pt]=Baixar Vivaldi mais recente
-Name[ru]=Скачать последнюю версию Vivaldi
-Name[es]=Descarga la última versión de Vivaldi
-Name[sv]=Ladda ner senaste Vivaldi
 Name[af]=Laai die nuutste Vivaldi af
 Name[am]=የቅርብ ጊዜውን ቪቫልዲ አውርድ
 Name[ar]=Vivaldi ﻦﻣ ﺭﺍﺪﺻﺇ ﺙﺪﺣﺃ ﻞﻳﺰﻨﺗ
@@ -23,21 +8,29 @@ Name[ay]=Qhipa Vivaldi ukar apkatañamawa
 Name[az]=Ən son Vivaldi-ni yükləyin
 Name[ba]=Иң һуңғы Вивальдиҙы йөкләгеҙ
 Name[be]=Спампаваць апошнюю версію вівальдзі
+Name[bg]=Изтеглете най-новия Vivaldi
 Name[bm]=Vivaldi kura telesarse
 Name[bn]=সর্বশেষ Vivaldi ডাউনলোড করুন
 Name[bo]=ཆེས་གསར་བའི་ཝེ་ཨར་ཏི་ཕབ་ལེན་བྱས།
 Name[bs]=Preuzmite najnoviji Vivaldi
 Name[ca]=Descarrega lúltima versió de Vivaldi
 Name[co]=Scarica lultima versione di Vivaldi
+Name[cs]=Stáhněte si nejnovější Vivaldi
 Name[cy]=Lawrlwythwch Vivaldi diweddaraf
+Name[da]=Download den seneste Vivaldi
+Name[de]=Laden Sie die neueste Version von Vivaldi
 Name[dv]=ވާއްލަށްކޮ ޑްލޯންއުޑަ ޑީލްވަވި ގެހުފަ މެންއެ
 Name[ee]=Wɔ Vivaldi yeyetɔ ƒe kɔpi
+Name[el]=Κατεβάστε το τελευταίο Vivaldi
 Name[eo]=Elŝutu la plej novan Vivaldi
+Name[es]=Descarga la última versión de Vivaldi
 Name[et]=Laadige alla Vivaldi uusim versioon
 Name[eu]=Deskargatu azken Vivaldi
 Name[fa]=Vivaldi ﻦﯾﺮﺗﺪﯾﺪﺟ ﺩﻮﻠﻧﺍﺩ
+Name[fi]=Lataa uusin Vivaldi
 Name[fj]=Lavetaka na Vivaldi vou
 Name[fo]=Download latest Vivaldi
+Name[fr]=Télécharger le dernier Vivaldi
 Name[fy]=Download lêste Vivaldi
 Name[ga]=Íoslódáil an leagan is déanaí de Vivaldi
 Name[gd]=Luchdaich a-nuas an t-òran Vivaldi.
@@ -49,10 +42,12 @@ Name[he]=רתויב תינכדעה Vivaldi תא דרוה
 Name[hi]=नवीनतम विवाल्डी डाउनलोड करें
 Name[hr]=Preuzmite najnoviji Vivaldi
 Name[ht]=Telechaje dènye Vivaldi
+Name[hu]=Töltse le a legújabb Vivaldi
 Name[hy]=Ներբեռնեք Vivaldi-ի վերջին տարբերակը
 Name[id]=Unduh Vivaldi terbaru
 Name[ig]=Budata Vivaldi kacha ọhụrụ
 Name[is]=Sækja nýjasta Vivaldi
+Name[it]=Scarica l'ultimo Vivaldi
 Name[iu]=ᒥᓇᕆᓗᒍ ᓄᑖᖑᓛᖅ Vivaldi
 Name[ja]=最新の Vivaldi をダウンロード
 Name[jv]=Download Vivaldi paling anyar
@@ -80,14 +75,18 @@ Name[ms]=Muat turun Vivaldi terkini
 Name[mt]=Niżżel l-aħħar Vivaldi
 Name[my]=နောက်ဆုံးထွက် Vivaldi ကိုဒေါင်းလုဒ်လုပ်ပါ။
 Name[ne]=नवीनतम Vivaldi डाउनलोड गर्नुहोस्
+Name[nl]=Download de nieuwste Vivaldi
 Name[no]=Last ned nyeste Vivaldi
 Name[ny]=Tsitsani Vivaldi yaposachedwa
 Name[om]=Vivaldi isa haaraa buufadhaa
 Name[or]=ସର୍ବଶେଷ ଭିଭାଲ୍ଡି ଡାଉନଲୋଡ୍ କରନ୍ତୁ |
 Name[pa]=ਨਵੀਨਤਮ Vivaldi ਨੂੰ ਡਾਊਨਲੋਡ ਕਰੋ
+Name[pl]=Pobierz najnowszego Vivaldi
 Name[ps]=ﺉړﮐ ډﻮﻠﻧﻭﺍډ Vivaldi ﻲﺘﺳﻭﺭﻭ
+Name[pt]=Baixar Vivaldi mais recente
 Name[qu]=Qhipa kaq Vivaldi nisqamanta hurquy
 Name[ro]=Descărcați cel mai recent Vivaldi
+Name[ru]=Скачать последнюю версию Vivaldi
 Name[rw]=Kuramo Vivaldi iheruka
 Name[sa]=नवीनतम विवल्डी डाउनलोड करें
 Name[sd]=ﻮﻳﺮڪ ڊﻮﻟ ﻥﻮﺋﺍڊ Vivaldi ﺪﻳﺪﺟ
@@ -100,6 +99,7 @@ Name[so]=Soo deji Vivaldi ugu dambeeyay
 Name[sq]=Shkarkoni Vivaldi më të fundit
 Name[st]=Khoasolla Vivaldi ea morao-rao
 Name[su]=Unduh Vivaldi panganyarna
+Name[sv]=Ladda ner senaste Vivaldi
 Name[sw]=Pakua Vivaldi ya hivi karibuni
 Name[ta]=சமீபத்திய விவால்டியைப் பதிவிறக்கவும்
 Name[te]=తాజా వివాల్డిని డౌన్u200cలోడ్ చేయండి
@@ -109,7 +109,7 @@ Name[ti]=Download latest ቪቫልዲ
 Name[tk]=Iň soňky Wivaldi göçürip alyň
 Name[tl]=I-download ang pinakabagong Vivaldi
 Name[to]=Download e Vivaldi fakamuimuitaha
-Name[tr]=En son Vivaldiyi indirin
+Name[tr]=Vivaldi son sürümü indirin
 Name[ts]=Download Vivaldi ya sweswinyana
 Name[tt]=Соңгы Вивалди йөкләү
 Name[tw]=Twe Vivaldi a aba foforo no
@@ -254,5 +254,5 @@ Comment=Download latest Vivaldi
 Exec=vv-dl-latest
 Terminal=false
 Type=Application
-Categories=X-Internet-browser
+Categories=X-Internet
 GenericName=VVDL
