--- a/buildquantumvis/rootfs/rootfs-skeleton/usr/share/applications/ff-dl-latest.desktop
+++ b/buildquantumvis/rootfs/rootfs-skeleton/usr/share/applications/ff-dl-latest.desktop
@@ -1,9 +1,5 @@
 [Desktop Entry]
 Encoding=UTF-8
-Name[fr]=Télécharger le dernier Firefox
-Name[de]=Laden Sie den neuesten Firefox herunter
-Name[es]=Descargar la última versión de Firefox
-Name[ru]=Загрузить последнюю версию Firefox
 Name[af]=Laai die nuutste Firefox af
 Name[am]=የቅርብ ጊዜውን ፋየርፎክስ ያውርዱ
 Name[ar]=Firefox ﻦﻣ ﺭﺍﺪﺻﺇ ﺙﺪﺣﺃ ﻞﻳﺰﻨﺘﺑ ﻢﻗ
@@ -22,16 +18,19 @@ Name[co]=Scaricate lultimu Firefox
 Name[cs]=Stáhněte si nejnovější Firefox
 Name[cy]=Lawrlwythwch y Firefox diweddaraf
 Name[da]=Download den nyeste Firefox
+Name[de]=Laden Sie den neuesten Firefox herunter
 Name[dv]=ވެށެވާއްލަށްކޮ ޑްލޯންއުޑަ ސްކްފޮރޔަފަ ގެހުފަ މެންއެ
 Name[ee]=Wɔ Firefox yeyetɔ ƒe kɔpi
 Name[el]=Κατεβάστε το πιο πρόσφατο Firefox
 Name[eo]=Elŝutu la plej novan Firefox
+Name[es]=Descargar la última versión de Firefox
 Name[et]=Laadige alla uusim Firefox
 Name[eu]=Deskargatu azken Firefox
 Name[fa]=ﺪﯿﻨﮐ ﺩﻮﻠﻧﺍﺩ ﺍﺭ ﺲﮐﺎﻓﺮﯾﺎﻓ ﻪﺨﺴﻧ ﻦﯾﺮﺧﺁ
 Name[fi]=Lataa uusin Firefox
 Name[fj]=Lavetaka na Firefox vou
 Name[fo]=Download latest Firefox
+Name[fr]=Télécharger le dernier Firefox
 Name[fy]=Download lêste Firefox
 Name[ga]=Íoslódáil an leagan is déanaí de firefox
 Name[gd]=Luchdaich a-nuas firefox as ùire.
@@ -87,6 +86,7 @@ Name[ps]=ﺉړﮐ ډﻮﻠﻧﻭﺍډ ﺲﮐﺎﻓﺮﯾﺎﻓ ﻩﺯﺎﺗ
 Name[pt]=Baixe o Firefox mais recente
 Name[qu]=Qhipa Firefox nisqamanta uraykachiy
 Name[ro]=Descărcați cel mai recent Firefox
+Name[ru]=Загрузить последнюю версию Firefox
 Name[rw]=Kuramo Firefox iheruka
 Name[sa]=नवीनतमं Firefox डाउनलोड् कुर्वन्तु
 Name[sd]=ﻮﻳﺮڪ ڊﻮﻟ ﻥﻮﺋﺍڊ ﺲڪﺎﻓ ﺮﺋﺎﻓ ﺪﻳﺪﺟ
@@ -109,7 +109,7 @@ Name[ti]=ናይ መወዳእታ ፋየርፎክስ ኣውርድ
 Name[tk]=Iň soňky Firefox-y göçürip alyň
 Name[tl]=I-download ang pinakabagong Firefox
 Name[to]=Download e Firefox fakamuimuitaha
-Name[tr]=En son Firefoxu indirin
+Name[tr]=Firefox son sürümü indirin
 Name[ts]=Download Firefox ya sweswinyana
 Name[tt]=Соңгы Firefox-ны йөкләү
 Name[tw]=Twe Firefox a aba foforo
@@ -126,10 +126,6 @@ Name[zh]=下载最新的火狐浏览器
 Name[zu]=Landa iFirefox yakamuva
 Name=Download latest Firefox
 Icon=ff-dl-latest.png
-Comment[fr]=Télécharger le dernier Firefox
-Comment[de]=Laden Sie den neuesten Firefox herunter
-Comment[es]=Descargar la última versión de Firefox
-Comment[ru]=Загрузите последнюю версию Firefox
 Comment[af]=Laai die nuutste Firefox af
 Comment[am]=የቅርብ ጊዜውን ፋየርፎክስ ያውርዱ
 Comment[ar]=Firefox ﻦﻣ ﺭﺍﺪﺻﺇ ﺙﺪﺣﺃ ﻞﻳﺰﻨﺘﺑ ﻢﻗ
@@ -148,16 +144,19 @@ Comment[co]=Scaricate lultimu Firefox
 Comment[cs]=Stáhněte si nejnovější Firefox
 Comment[cy]=Lawrlwythwch y Firefox diweddaraf
 Comment[da]=Download den nyeste Firefox
+Comment[de]=Laden Sie den neuesten Firefox herunter
 Comment[dv]=ވެށެވާއްލަށްކޮ ޑްލޯންއުޑަ ސްކްފޮރޔަފަ ގެހުފަ މެންއެ
 Comment[ee]=Wɔ Firefox yeyetɔ ƒe kɔpi
 Comment[el]=Κατεβάστε το πιο πρόσφατο Firefox
 Comment[eo]=Elŝutu la plej novan Firefox
+Comment[es]=Descargar la última versión de Firefox
 Comment[et]=Laadige alla uusim Firefox
 Comment[eu]=Deskargatu azken Firefox
 Comment[fa]=ﺪﯿﻨﮐ ﺩﻮﻠﻧﺍﺩ ﺍﺭ ﺲﮐﺎﻓﺮﯾﺎﻓ ﻪﺨﺴﻧ ﻦﯾﺮﺧﺁ
 Comment[fi]=Lataa uusin Firefox
 Comment[fj]=Lavetaka na Firefox vou
 Comment[fo]=Download latest Firefox
+Comment[fr]=Télécharger le dernier Firefox
 Comment[fy]=Download lêste Firefox
 Comment[ga]=Íoslódáil an leagan is déanaí de firefox
 Comment[gd]=Luchdaich a-nuas firefox as ùire.
@@ -213,6 +212,7 @@ Comment[ps]=ﺉړﮐ ډﻮﻠﻧﻭﺍډ ﺲﮐﺎﻓﺮﯾﺎﻓ ﻩﺯﺎﺗ
 Comment[pt]=Baixe o Firefox mais recente
 Comment[qu]=Qhipa Firefox nisqamanta uraykachiy
 Comment[ro]=Descărcați cel mai recent Firefox
+Comment[ru]=Загрузите последнюю версию Firefox
 Comment[rw]=Kuramo Firefox iheruka
 Comment[sa]=नवीनतमं Firefox डाउनलोड् कुर्वन्तु
 Comment[sd]=ﻮﻳﺮڪ ڊﻮﻟ ﻥﻮﺋﺍڊ ﺲڪﺎﻓ ﺮﺋﺎﻓ ﺪﻳﺪﺟ
